# dylan-assistant

./: .editorconfig  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  renovate.json  requirements.txt  run_server.py  test_assistant.py
examples/: client_example.py
src/: __init__.py
src/api/: main.py
src/core/: config.py  state.py
src/integrations/: __init__.py  mcp_integration.py
src/tools/: __init__.py  base.py
src/workflows/: __init__.py  assistant.py
tests/: __init__.py
tests/unit/: test_api.py  test_tools.py
